--- a/.eslintrc
+++ b/.eslintrc
@@ -9,9 +9,9 @@
     },
     "plugins": ["prettier"],
     "rules": {
-        "prettier/prettier": "error",
+        "prettier/prettier": 0,
         "arrow-body-style": 0,
-        "no-console": ["error", { "allow": ["warn", "error"] }],
+        "no-console": ["warn", { "allow": ["warn", "error"] }],
         "no-underscore-dangle": 0,
         "no-useless-catch": 0
     },
